--- a/src/app/index.html
+++ b/src/app/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="eclipse.js"></script>
     <script src="primitives.js"></script>
     <script src="physics.js"></script>
+    <script src="drawing.js"></script>
+    <script src="camera.js"></script>
     <script type="module" src="renderer.js" defer></script>
     <title>Physics Simulation</title>
   </head>
- <body>
+  <body>
     <canvas id="mainCanvas"></canvas>
   </body>
 </html>
