Added grid file

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -9,6 +9,7 @@
     <script src="physics.js"></script>
     <script src="drawing.js"></script>
     <script src="camera.js"></script>
+    <script src="grid.js"></script>
     <script type="module" src="renderer.js" defer></script>
     <title>Physics Simulation</title>
   </head>
