Camera can now be moved with wasd. New debug functions

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,6 +10,7 @@
     <script src="drawing.js"></script>
     <script src="camera.js"></script>
     <script src="grid.js"></script>
+    <script src="controller.js"></script>
     <script type="module" src="renderer.js" defer></script>
     <title>Physics Simulation</title>
   </head>
