--- a/src/app/index.html
+++ b/src/app/index.html
@@ -11,7 +11,7 @@
     <script src="camera.js"></script>
     <script src="grid.js"></script>
     <script src="controller.js"></script>
-    <script type="module" src="renderer.js" defer></script>
+    <script src="renderer.js" defer></script>
     <title>Physics Simulation</title>
   </head>
   <body>
