--- a/src/app/index.html
+++ b/src/app/index.html
@@ -11,6 +11,7 @@
     <script src="camera.js"></script>
     <script src="grid.js"></script>
     <script src="controller.js"></script>
+    <script src="fileReader.js"></script>
     <script src="renderer.js" defer></script>
     <title>Physics Simulation</title>
   </head>
