--- a/src/app/index.html
+++ b/src/app/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <script src="eclipse.js"></script>
-    <script src="primitives.js"></script>
-    <script src="physics.js"></script>
-    <script src="drawing.js"></script>
-    <script src="camera.js"></script>
-    <script src="grid.js"></script>
-    <script src="controller.js"></script>
-    <script src="fileReader.js"></script>
+    <script src="eclipse.js" defer></script>
+    <script src="primitives.js" defer></script>
+    <script src="physics.js" defer></script>
+    <script src="drawing.js" defer></script>
+    <script src="camera.js" defer></script>
+    <script src="grid.js" defer></script>
+    <script src="controller.js" defer></script>
+    <script src="fileReader.js" defer></script>
     <script src="renderer.js" defer></script>
     <title>Physics Simulation</title>
   </head>
