Can now change vars in menus, fixes, improvements, many other changes

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -24,7 +24,7 @@ body {
 }
 .menuBoxTitle {
   color: black;
-  font-family: 'Times New Roman';
+  font-family: 'Courier New', Courier, monospace;
   font-weight: 800;
   font-size: larger;
   user-select: none;
@@ -33,7 +33,30 @@ body {
 }
 .menuBoxInput {
   color: black;
-  font-family: 'Times New Roman';
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 800;
+  font-size: larger;
+  user-select: none;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+#isStaticInput {
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
+  user-select: none;
+  margin-right: 10px;
+}
+#colorInput {
+  width: 20px;
+  padding: 0;
+  border: none;
+  border-radius: 5px;
+  margin: 5px;
+}
+.menuBoxSelect {
+  color: black;
+  font-family: 'Courier New', Courier, monospace;
   font-weight: 800;
   font-size: larger;
   user-select: none;
@@ -41,12 +64,23 @@ body {
 }
 .menuBoxConfirm {
   color: black;
-  font-family: 'Times New Roman';
+  font-family: 'Courier New', Courier, monospace;
   font-weight: 800;
   font-size: larger;
   user-select: none;
   margin-left: 10px;
   margin-right: 10px;
+  cursor: pointer;
   width: auto;
   height: auto;
+}
+.menuBoxLabel {
+  color: black;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 600;
+  font-size: large;
+  user-select: none;
+  margin-left: 10px;
+  padding: 0;
+  white-space: pre-wrap;
 }
