--- a/src/app/index.html
+++ b/src/app/index.html
@@ -12,6 +12,8 @@
     <script src="grid.js" defer></script>
     <script src="controller.js" defer></script>
     <script src="fileReader.js" defer></script>
+    <script src="menus.js" defer></script>
+    <script src="simRunner.js" defer></script>
     <script src="renderer.js" defer></script>
     <title>Physics Simulation</title>
   </head>
